# tglf-moe

./: .env  .gitignore  configs.yaml  environment.yml  package-lock.json  package.json  pyproject.toml  run_all.py
.github/workflows/: mirror.yml
config/: kube.yaml  launch.yaml
qlnn_classification/__MACOSX/qlnn_classification/test/: ._qlnn_classification_data.h5
qlnn_classification/qlnn_classification/: qlnn_classification_data.json
qlnn_classification/qlnn_classification/test/: qlnn_classification_data.h5
qlnn_classification/qlnn_classification/train/: qlnn_classification_data.h5
src/: .gitignore  __init__.py  configs.yaml  run_all.py  run_rollout.py  run_train.py
src/dataset/: __init__.py  base.py  tglfData.py
src/model/: MoE.py  __init__.py  base.py
src/ops/: basic.py
src/trainer/: __init__.py  base.py  moeTrainer.py
src/utils/: __init__.py  basic.py  cloud.py  dataset_utils.py  metrics.py  normalizer.py
