[tool.poetry]
name = "tglf-moe"
version = "0.1.0"
description = ""
authors = ["Lucas Hlaing"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = "==1.26.2"
matplotlib = ">=3.10.3,<4.0.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
