[tool.poetry]
name = "tglf-moe"
version = "0.1.0"
description = ""
authors = ["Lucas Hlaing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
torch = "^2.4.0"
bson = "^0.5.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
tqdm = "^4.66.4"
uncertainties = "^3.2.2"
wandb = "^0.17.5"
black = "^24.8.0"
torchdata = "^0.8.0"
h5py = "^3.11.0"
tabulate = "^0.9.0"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
boto3 = "^1.36.18"
s5cmd = "^0.2.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
